--- a/app/views/account/reviews.html.erb
+++ b/app/views/account/reviews.html.erb
@@ -2,7 +2,7 @@
   <div class="content-wrapper">
     <div class="page-header">
       <h1>My Reviews</h1>
-      <%= link_to('Create Review', reviews_new_path, class: 'btn') %>
+      <%= link_to('Create Review', new_review_path, class: 'btn') %>
     </div>
   </div>
   <div class="content-wrapper">
