--- a/app/views/application/_search_form.html.erb
+++ b/app/views/application/_search_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(reviews_index_path, method: :get, class: 'global-search') do %>
+<%= form_tag(reviews_path, method: :get, class: 'global-search') do %>
   <div class="input-inline">
     <label class="input-group__label sr-only" for="q">Looking for good books?</label>
     <div class="input-row">
