--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag(reviews_create_path, class: 'global-search') do %>
+<%= form_tag(reviews_path, class: 'global-search') do %>
   <div class="input-group input-group--horizontal">
     <%= label_tag('Book Title', nil, class: "input-group__label") %>
     <%= text_field_tag('book_title', nil, class: 'input-group__field', placeholder: 'E.g. Fifty Shades of Grey') %>
