--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,7 @@
 <main>
   <div class="content-wrapper">
     <h1>Create new review</h1>
-    <%= render(partial: 'form', locals: { review: @review }) %>
+    <%= render(partial: 'edit_form', locals: { review: @review }) %>
   </div>
 </main>
 <br><br>
