Implement form to add a book to `users Reviews list`
Render `Add Book`only for logged in users

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -23,12 +23,17 @@
               </a>
             </li>
             <li>
-              <button class="btn delta" type="button">
-                <svg class="icon-heart icon--sm" role="presentation">
-                  <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#pluss") %>"></use>
-                </svg>
-                Add
-              </button>
+              <% if(@user.present?) %>
+                <%= form_tag(user_books_path(@user)) do %>
+                  <%= hidden_field_tag('review_id', @review.id) %>
+                  <%= button_tag(class: 'btn delta', type: 'submit') do %>
+                    <svg class="icon-heart icon--sm" role="presentation">
+                      <use xlink:href="<%= asset_url("icons/icons-defs.svg" + "#heart") %>"></use>
+                    </svg>
+                    Add
+                  <% end %>
+                <% end %>
+              <% end %>
             </li>
           </ul>
           <div class="goal__intro">
