Hide comment form when not logged in

--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -77,17 +77,19 @@
     <div class="comments">
       <h2 class="comments__title">Discussion<span> 3 comments</span></h2>
 
-      <%= form_for([@review, @comment], html: { class: 'comments__input' }) do |form| %>
-        <%= image_tag('avatar', alt: 'Default avatar') %>
-        <div class="input-group">
-          <%= form.label(:body, 'Add a comment', class: 'input-group__label') %>
-          <%= form.text_area(:body, class: 'input-group__field') %>
-        </div>
-        <%= form.submit('Post', class: 'btn btn--primary') %>
+      <% if(@display_add_comment) %>
+        <%= form_for([@review, @comment], html: { class: 'comments__input' }) do |form| %>
+          <%= image_tag('avatar', alt: 'Default avatar') %>
+          <div class="input-group">
+            <%= form.label(:body, 'Add a comment', class: 'input-group__label') %>
+            <%= form.text_area(:body, class: 'input-group__field') %>
+          </div>
+          <%= form.submit('Post', class: 'btn btn--primary') %>
+        <% end %>
       <% end %>
 
       <ul class="comments__listing">
-        <%= @review.comments.each do |comment| %>
+       <% @review.comments.each do |comment| %>
         <li class="comment">
           <%= image_tag('avatar', alt: 'Default avatar') %>
           <div class="comment__body">
