--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,29 +25,35 @@
               <li class="nav-item">
                 <a class="nav-link" href="/about.html">About</a>
               </li>
-              <li class="nav-item">
-                <%= link_to('My Reviews', account_reviews_path) %>
-              </li>
+              <% if(@user.present?) %>
+                <li class="nav-item">
+                  <%= link_to('My Reviews', account_reviews_path) %>
+                </li>
+              <% end %>
             </ul>
           </nav>
           <%= render(partial: 'search_form') %>
           <nav class="siteHeader__personal">
             <ul class="main-navigation">
-              <li class="nav-item">
-                <%= link_to('Log In', new_user_path) %>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Menu
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <%= link_to('Home', root_path) %>
-                  <a class="dropdown-item" href="/about.html">About</a>
-                  <a class="dropdown-item" href="#">My reviews</a>
-                  <div class="dropdown-divider"></div>
+              <% if(@user.nil?) %>
+                <li class="nav-item">
                   <%= link_to('Log In', new_user_path) %>
-                </div>
-              </li>
+                </li>
+              <% end %>
+              <% if(@user.present?) %>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <%= @user.email %>
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <%= link_to('Home', root_path) %>
+                    <a class="dropdown-item" href="/about.html">About</a>
+                    <%= link_to('My Reviews', account_reviews_path) %>
+                    <div class="dropdown-divider"></div>
+                    <%= link_to('Log out', root_path) %>
+                  </div>
+                </li>
+              <% end %>
             </ul>
           </nav>
         </div>
